css/screen.css
html {
  font-size: 16px;
  line-height: 1.5em;
}
body {
  font-family: "Helvetica", sans-serif;
  display: grid;
  grid-template-columns: 5% 90% 5%;
  grid-template-rows: 5% auto;
  background-color: rgb(221,221,221);
}
h1 {
  grid-column-start: 2;
  grid-row: 2;
  padding: 1em;
  color: rgba(98,135,158,255);
  background-color: rgb(186,218,238);
}
form {
  grid-column-start: 2;
  grid-row-start: 3;
  border-radius: 1em;
  color: rgba(88,125,148,255);
  background-color: rgb(186,218,238);
}
form ul {
  display: flex;
  flex-direction: column;
  list-style-type: none;
}
form li {
  margin-top: 1.5em;
  align-self: flex-start;
}

button {
  background-color: rgba(182,189,225,255);
  border-radius: 0.5em;
}

@media screen and (min-width: 800px) {
  html {
    font-size: 18px;
  }
  body {
    grid-template-columns: 5% repeat(6, 15%) 5%;
  }
  h1 {
    grid-column-end: 8;
  }
  form {
    grid-column-end: 7;
  }
  form ul {
    flex-direction: row;
    align-items: flex-start;
    flex-wrap: wrap;
  }
  form li {
    flex-basis: auto;
    margin-right: 1em;
    align-self: center;
  }
}

